<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.bmin.androidbearsandbox.MainActivity">

    <RelativeLayout
        android:layout_width="368dp"
        android:layout_height="495dp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp">

        <EditText
            android:id="@+id/tvConnectionResult"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="52dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/hello" />

        <Button
            android:id="@+id/btConnectionCheck"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvConnectionResult"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="21dp"
            android:text="@string/connection_button" />

        <TextView
            android:id="@+id/tvCountLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/tvConnectionResult"
            android:layout_centerVertical="true"
            android:text="@string/count_label" />

        <TextView
            android:id="@+id/tvCountResult"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/tvCountLabel"
            android:layout_alignBottom="@+id/tvCountLabel"
            android:layout_alignEnd="@+id/tvConnectionResult"
            android:text="@string/count_result" />

        <Button
            android:id="@+id/btCounter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvCountLabel"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="36dp"
            android:text="@string/button_count" />

    </RelativeLayout>
</android.support.constraint.ConstraintLayout>
